# coffee-shop-backend-test-assignment

./: .gitignore  README.md  alembic.ini  docker-compose.yml  gitflic.yml  makefile  pyproject.toml
app/back/: Dockerfile  docker-compose.yml  main.py  routers.py
app/back/api/: carts_item.py  delivery_methods.py  menu_categories.py  menu_items.py  order_statuses.py  orders.py  products.py  roles.py  users.py
app/back/schemas/: __init__.py  carts_item.py  delivery_methods.py  menu.py  order_statuses.py  orders.py  out.py  products.py  roles.py  users.py
app/bot/: Dockerfile  docker-compose.yml  main.py  run.sh
app/bot/filters/: __init__.py  basic.py
app/bot/handlers/: __init__.py  routers.py
app/bot/handlers/admin/: __init__.py  admin_panel.py  assign_barista.py  basic.py  delivery_methods.py  location.py  main_menu.py  menu.py  menu_categories.py  menu_items.py  orders.py  payment.py  server.py  statuses.py
app/bot/handlers/barista/: __init__.py  orders.py  start.py  statuses.py
app/bot/handlers/client/: __init__.py  balance.py  basic.py  keys.py  location.py  menu.py  orders.py  other.py  referals.py  start.py
app/bot/keyboards/: __init__.py  basic.py  callback.py
app/bot/states/: states.py
app/bot/utils/: registry.py
app/modules/database/: __init__.py  connect.py  core.py
app/modules/database/alembic/: env.py
app/modules/database/alembic/versions/: 2025_01_18_0818-c2ca94db76be_init.py  2025_01_19_0923-115f77598f32_add_products.py  2025_01_19_1005-951b031525b7_add_carts_item.py  2025_01_19_1100-e32c4f58a6e2_add_delivery_method.py  2025_01_19_1128-ed804436c9ac_add_orders_and_statuses.py  2025_01_19_1809-32da44957719_init.py  2025_01_20_0930-e1460dd021c3_add_created_at_to_orders.py  2025_01_21_0334-fc800a2d5006_init.py
app/modules/database/management/: db_clear.py
app/modules/database/methods/: __init__.py  carts_item.py  delivery_methods.py  menu_categories.py  menu_items.py  order_statuses.py  orders.py  products.py  roles.py  users.py
app/modules/database/models/: __init__.py  carts_item.py  delivery_methods.py  menu.py  order_statuses.py  orders.py  orders_menu_items.py  products.py  roles.py  users.py
app/modules/database/seeders/: all_seeds.py  config_seeds.py  delivery_methods_seeds.py  device_types_seeds.py  discount_types_seeds.py  helpers.py  main.py  menu_categories_seed.py  menu_items_seed.py  order_statuses_seeds.py  roles_seeds.py  statuses_seeds.py  transaction_types_seeds.py  users_seed.py  users_seeds.py
app/modules/database/seeders/tests/: keys_users_seeds.py  locations_seeds.py  servers_seeds.py
app/modules/dataclasses/: __init__.py  buttons.py  delivery_methods.py  order_status.py  roles.py
app/modules/envs/: settings.py
